noinst_LTLIBRARIES = libsub_bencode.la

libsub_bencode_la_SOURCES = \
	bencode.h \
	bytestr.cc \
	bytestr.h \
	dictionary.cc \
	dictionary.h \
	element.h \
	integer.cc \
	integer.h \
	list.cc \
	list.h \
	parser.cc \
	parser.h \
	tokenizer.cc \
	tokenizer.h 

libsub_bencode_la_CXXFLAGS = -I$(srcdir)/..
